# aoc-c-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  new.sh
src/: main.c
src/days/: solution.h
src/lib/: utils.c  utils.h
